# zetrix-vc-flutter

./: .gitignore  README.md  pubspec.yaml
example/: pubspec.yaml
example/lib/: dcql_vp_screen.dart  json_screen.dart  main.dart
example/lib/config/: test_keys.dart  test_keys.dart.example
ios/: zetrix_vc_flutter.podspec
lib/: api.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  zetrix_vc_flutter.dart
lib/bbs/: bbs.dart
lib/src/: config.dart
lib/src/models/: models.dart  sdk_exceptions.dart  sdk_exceptions.freezed.dart  standard_api_message.dart  standard_api_message.g.dart  standard_api_response.dart  standard_api_response.g.dart
lib/src/protocols/: basic_message_protocol.dart  coordinate_mediation_protocol.dart  discover_features_protocol.dart  message_pickup_protocol.dart  out_of_band_protocol.dart  present_proof_protocol.dart  (+4 more)
rust/: Cargo.toml
rust/src/: api.rs  frb_generated.rs  lib.rs
rust/src/bulletproof/: mod.rs  prover.rs  verifier.rs
test/: aes_gcm_util_test.dart  bulletproof_java_compatibility_test.dart  bulletproof_test.dart  create_vp_test.dart  did_resolver_test.dart  didcomm_basic_message_test.dart  didcomm_coordinate_mediation_test.dart  didcomm_discover_features_test.dart  didcomm_message_pickup_test.dart  didcomm_out_of_band_test.dart  didcomm_present_proof_test.dart  didcomm_report_problem_test.dart  didcomm_routing_test.dart  didcomm_trust_ping_test.dart  encryption_test.dart  pack_auth_crypt_test.dart  rsa_util_test.dart  unpack_test.dart  vc_test.dart  vp_test.dart  x25519_encryption_utils_test.dart
(+95 files in other folders)
